--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.show-sql=true
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type=trace
+#spring.ldap.embedded.ldif=src/main/resources/test-server.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+spring.ldap.embedded.ldif=classpath:test-server.ldif 
+spring.ldap.embedded.port=8389 
+spring.ldap.embedded.url=ldap://localhost:8389/
