--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=pa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Turn Statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
 
 spring.jpa.show-sql=true
